--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@types/node": "^22.15.3",
     "@types/react": "19.1.2",
     "gh-pages": "^6.3.0",
     "typescript": "5.8.3"
