--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.5",
     "next": "^15.3.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "sass": "^1.87.0"
   },
   "devDependencies": {
     "@types/node": "^22.15.3",
