--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.3.5",
+    "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "next": "^15.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
