--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.13.1",
     "next": "^15.3.1",
     "react": "^19.1.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.1.0",
     "sass": "^1.87.0"
   },
