--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^22.15.3",
     "@types/react": "19.1.2",
+    "eslint-config-next": "15.3.3",
     "gh-pages": "^6.3.0",
     "typescript": "5.8.3"
   }
