--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "next": "^15.3.1",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.1.0",
     "sass": "^1.87.0"
