--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^15.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "sass": "^1.87.0"
+    "sass": "^1.87.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.15.3",
